src/objects/Committee__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Established_Date__c</fullName>
        <label>Established Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Annual Meeting</fullName>
                </value>
                <value>
                    <fullName>Constituency Group</fullName>
                </value>
                <value>
                    <fullName>Scientific Achievement Award</fullName>
                </value>
                <value>
                    <fullName>Scientific Grant Review</fullName>
                </value>
                <value>
                    <fullName>Standing</fullName>
                </value>
                <value>
                    <fullName>Specialty Group</fullName>
                </value>
                <value>
                    <fullName>Scientific Working Group</fullName>
                </value>
                <value>
                    <fullName>Scientific Task Force</fullName>
                </value>
                <value>
                    <fullName>Journal Editorial Board</fullName>
                </value>
                <value>
                    <fullName>TBD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Unique_Name_Check__c</fullName>
        <description>Check if Committee Name is unique</description>
        <label>Unique Name Check</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Committee</label>
    <nameField>
        <label>Committee Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Committees</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Committee_Name_is_Unique</fullName>
        <active>true</active>
        <description>Avoiding duplicate Committee Names</description>
        <errorConditionFormula>AND(CONTAINS(VLOOKUP( $ObjectType.Committee__c.Fields.Name, 
$ObjectType.Committee__c.Fields.Name, UPPER(Name)), UPPER(Name)), OR(ISNEW(), ISCHANGED(Name)))</errorConditionFormula>
        <errorMessage>There is already a Committee with this name. Please choose a different name.</errorMessage>
    </validationRules>
</CustomObject>